fix webhooks overflow

--- a/node-directory-sync-example/public/stylesheets/style.css
+++ b/node-directory-sync-example/public/stylesheets/style.css
@@ -354,6 +354,11 @@ th {
     padding: 15px 40px;
 }
 
+.webhooks-container {
+  max-height: 600px;
+  overflow-y: scroll;
+}
+
 .width-75 {
     width: 75%;
 }
